# robokassa-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  server.json
.github/workflows/: ci.yml  docker-publish.yml  release.yml
docs/: docs.json  installation.mdx  introduction.mdx  mint.json  partner-api.md  quickstart.mdx  security.mdx  tools.mdx
src/robokassa/: __init__.py  checkout.py  client.py  fiscal.py  holding.py  partner.py  recurring.py  refund.py  signatures.py  sms.py  split.py  types.py  webhooks.py  xml_interface.py
src/robokassa_mcp/: __init__.py  __main__.py  server.py
tests/: test_check_payment.py  test_create_invoice.py  test_fiscal.py  test_holding.py  test_mcp_server.py  test_partner_refund.py  test_recurring.py  test_refund_create.py  test_refund_status.py  test_signatures.py  test_smoke.py  test_sms.py  test_split.py  test_webhooks.py  test_xml_interfaces.py  test_xml_parser.py
