[project]
name = "robokassa-mcp"
version = "0.1.2"
description = "Comprehensive Python client and MCP server for Robokassa payment gateway"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Artem Gasparyan", email = "aggasparyan1@gmail.com" },
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "llm",
    "claude",
    "anthropic",
    "ai",
    "robokassa",
    "payments",
    "russia",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]

[project.scripts]
robokassa-mcp = "robokassa_mcp.server:main"

[project.urls]
Homepage = "https://github.com/artgas1/robokassa-mcp"
Repository = "https://github.com/artgas1/robokassa-mcp"
Issues = "https://github.com/artgas1/robokassa-mcp/issues"
Changelog = "https://github.com/artgas1/robokassa-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robokassa", "src/robokassa_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
    "server.json",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    # Cyrillic docstrings are intentional — Robokassa documentation is in Russian.
    "RUF001", # ambiguous characters in strings
    "RUF002", # ambiguous characters in docstrings
    "RUF003", # ambiguous characters in comments
]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the Robokassa sandbox (require credentials)",
]
